# ai_student_agent

./: .coverage  .cursorrules  .env.example  .gitignore  .gitignore.optimized  Makefile  OPENAI_DEFAULT_SETUP_REPORT.md  PROJECT_SLIMMING_REPORT.md  README.md  SECURITY_GUIDE.md  UNNECESSARY_FILES_ANALYSIS.md  VERCEL_DEPLOYMENT_GUIDE.md  chroma_db  env_template  ingest.py  main.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project_structure.md  pyproject.toml  requirements-dev.txt  requirements-vercel.txt  requirements.txt  run_app.py  start_services.bat  test_vercel_api.py  ui.py  vercel.json  费曼学习系统项目结构完整解析.md
agent/: agent.py  prompts.py  tools.py
api/: index.py  main.py
chrome-extension/: package.json  vite.config.ts
config/: alerting_rules.yml  alertmanager.yml  blackbox.yml  docker-compose.monitoring.yml  prometheus.yml
core/: memory.py
data/: extracted_knowledge_graph.json  knowledge_graph.json  sample_knowledge.txt  test_knowledge_graph.json
deployment/: start_services.bat
docs/: PROMPT_MANAGEMENT_UPDATE.md  STREAMLIT_FIXES_REPORT.md  WORKFLOW_RECURSION_FIX_REPORT.md  agent_collaboration_mechanism.md  agent_status_analysis.md  agentic_ai_system_detailed_explanation.md  architecture_refactoring_summary.md  configuration_guide.md  gap_identifier_improvements.md  knowledge_graph_architecture.md  knowledge_graph_implementation_summary.md  knowledge_graph_neo4j_implementation.md  knowledge_graph_plan.md  knowledge_systems_test_report.md  large_scale_kg_test_summary.md  learning_guide.md  mindmap_tools_summary.md  monitoring_and_tracing_plan.md  (+17 more)
(+208 files in other folders)
